[workspace]
resolver = "2"
members = [
    "bindings/sdk",
    "bindings/wasm",
    "interface",
    "provider",
    "signers",
    "types",
    "utils",
    "wallet"
]
default-members = [
    "signers",
    "utils",
    "types",
    "provider",
    "interface",
    "wallet"
]

[workspace.dependencies]
anyhow = {version = "1", default-features = false}
bigdecimal = { version = "0.4", default-features = false, features = ["serde"] }
cfg-if = {version = "1", default-features = false}
chrono = { version = "0.4", default-features = false, features = ["serde", "now"] }
ethers = {version = "2", default-features = false}
ethers_primitives =  {version = "0.2", default-features = false}
franklin-crypto = { version = "0.0.5", git = "https://github.com/zkLinkProtocol/franklin-crypto.git", branch = "dev" }
futures = {version = "0.3", default-features = false}
getrandom = { version = "0.4", default-features = false }
web-sys = {version = "0.3", default-features = false}
web-time = {version = "1", default-features = false}
hex = {version = "0.4", default-features = false}
js-sys = {version = "0.3", default-features = false}
jsonrpsee = {version = "0.26", default-features = false}
k256 = { version = "0.13", default-features = false, features = ["ecdsa","sha256"] }
num = { version = "0.4", default-features = false, features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = {version = "0.10", default-features = false}
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_eip712 = {version = "0.2", default-features = false}
serde_json = {version = "1", default-features = false}
serde-wasm-bindgen = {version = "0.6", default-features = false}
starknet-core = {version = "0.16", default-features = false}
starknet-signers = {version = "0.14", default-features = false}
pythnet-sdk = {version = "3", default-features = false}
thiserror = {version = "2", default-features = false}
tokio = {version = "1", default-features = false}
tokio-tungstenite = {version = "0.28", default-features = false}
uuid = {version = "1", default-features = false}
uniffi = {version = "0.32", default-features = false}
uniffi_macros = {version = "0.32", default-features = false}
uniffi_build = {version = "0.32", default-features = false, features = ["builtin-bindgen"] }
validator = {version = "0.16", default-features = false, features = ["derive"] }
wasm-bindgen = {version = "0.2", default-features = false, features = ["serde-serialize"] }
wasm-bindgen-futures = {version = "0.4", default-features = false}
wasm-bindgen-test = {version = "0.3", default-features = false}

[profile.release]
opt-level = "s"
debug = true
lto = "thin"
strip = true  # Automatically strip symbols from the binary.
# The following configuration minimizes the size of the output packet, Reference https://github.com/johnthagen/min-sized-rust
# opt-level = "z"
# debug = false
# lto = true
# codegen-units = 1
